# Chip8-emulator

./: CMakeLists.txt  CMakeUserPresets.json  vcpkg.json
src/: Chip8.cpp  Chip8.h  Graphic.h  Keypad.h  Memory.cpp  Memory.h  PlatformSDL.cpp  PlatformSDL.h  RandomGenerator.h  Register.h  Stack.h  main.cpp
